# swastika-bot

./: .gitignore  Cargo.toml  Dockerfile  README.md
src/: main.rs  swastikas.rs  util.rs
