[package]
name = "swastika-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
teloxide = { version = "0.11", features = ["macros", "webhooks-axum"] }
log = "0.4"
pretty_env_logger = "0.4"
tokio = { version = "1.8", features = ["rt-multi-thread", "macros"] }
rand = "0.8.5"
chrono = "0.4.23"
url = "2.3.1"
